--- a/src/app/Pqges/pqge/pqge.component.scss
+++ b/src/app/Pqges/pqge/pqge.component.scss
@@ -347,7 +347,7 @@
 }
 
 .aboutus{
-	background-image: url( /src/assets/fond1.jpg);
+	// background-image: url( /src/assets/fond1.jpg);
 	height: 400px;
 	width: 100%;
 }
@@ -668,7 +668,7 @@ input{
 }
 
 .carte{
-	 background-image: url(/src/assets/cart.png);
+	//  background-image: url(/src/assets/cart.png);
     display: flex;
     height: 300px;
     width: 100%;
