--- a/src/app/Pqges/pqge/pqge.component.scss
+++ b/src/app/Pqges/pqge/pqge.component.scss
@@ -579,11 +579,11 @@
 	height: 300px;
 }
 
-.imageline1{
-	height: 150px;
-	width: 100%;
-	display: flex;
-}
+// .imageline1{
+// 	height: 150px;
+// 	width: 100%;
+// 	display: flex;
+// }
 .image{
 	height: 150px;
 	width: 20%;
@@ -606,19 +606,19 @@
 	padding-top: 10px;
 }
 
-.formu{
-	display: inline-block;
-	height: 50px;
-	width: 100%;
-	text-align: center;
-}
+// .formu{
+// 	display: inline-block;
+// 	height: 50px;
+// 	width: 100%;
+// 	text-align: center;
+// }
 
-.eleform{
-	text-align: center;
-	margin-right: 10px;
-	display: inline-block;
+// .eleform{
+// 	text-align: center;
+// 	margin-right: 10px;
+// 	display: inline-block;
 
-}
+// }
 
 input{
 	height: 30px;
@@ -627,12 +627,12 @@ input{
 	margin-left: 2px;
 }
 
-.newtexte{
-	height: 100px;
-	width: 100%;
-	text-align: center;
-	color: #e1e0ce;
-}
+// .newtexte{
+// 	height: 100px;
+// 	width: 100%;
+// 	text-align: center;
+// 	color: #e1e0ce;
+// }
 
 .noscontact{
 	height: 470px;
@@ -807,55 +807,3 @@ a{
 
 
 
-
-
-
-
-
-
-/*.call{
-
-	display: inline-block;
-	text-align:right;
-	margin-right: 80px;
-		align-items: center;
-}
-
-.entete{
-	display: flex;
-	flex-direction: row;
-	color: white;
-	text-align: right;
-width: 70%;
-	height:6vh;
-	vertical-align: center;
-}
-
-.callme{
-	display: inline-block;
-	text-align:right;
-    border:5px #9dd74d solid;
-	background-color: #9dd74d;
-	vertical-align: center;
-	border-radius: 3px 3px 3px 3px ;
-		align-items: center;
-	margin-right: 10px;
-
-}
-
-.callImag{
-	height: 6vh;
-	width: 30%;
-}
-
-.aligneCall{
-	display: flex;
-	height: 6vh;
-	background: black;
-}
-
-.dvi{
-	display: flex;
-	flex-direction: row;
-}
-*/
