--- a/src/app/Pqges/pqge/pqge.component.html
+++ b/src/app/Pqges/pqge/pqge.component.html
@@ -11,12 +11,52 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         </title>
     </head>
     <body>
-        <div class="Hautdepage">
+        <div style="width: 100%; height: 50px;display: flex;background: black;">
             <div class="re">
-                <div class="alie">f</div>
-                <div class="alie">tw</div>
-                <div class="alie">g+</div>
-                <div class="alie">in</div>
+                <div style=" width: 20px;
+    height: 20px;
+    background-color: #5e5e5e;
+    border: 3px #5e5e5e solid;
+    border-radius: 100%;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    color: white;
+    display: inline-block;
+    font-weight: bold; ">f</div>
+                <div style=" width: 20px;
+    height: 20px;
+    background-color: #5e5e5e;
+    border: 3px #5e5e5e solid;
+    border-radius: 100%;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    color: white;
+    display: inline-block;
+    font-weight: bold; ">tw</div>
+                <div style=" width: 20px;
+    height: 20px;
+    background-color: #5e5e5e;
+    border: 3px #5e5e5e solid;
+    border-radius: 100%;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    color: white;
+    display: inline-block;
+    font-weight: bold; ">g+</div>
+                <div style=" width: 20px;
+    height: 20px;
+    background-color: #5e5e5e;
+    border: 3px #5e5e5e solid;
+    border-radius: 100%;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    color: white;
+    display: inline-block;
+    font-weight: bold; ">in</div>
             </div>
             <div class="contact">
                 <ul class="enteteliste">
@@ -264,37 +304,84 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 </form>
             </div>
 
-            <div class="newtexte"> <br>LUXURIANT BUILD Energies élabore des solutions <br>et services multi-techniques, sur-mesure, dédiés aux infrastructures, aux bâtiments, aux usines.</div>
+            <div style="height: 100px;
+	width: 100%;
+	text-align: center;
+	color: #e1e0ce;"> <br>LUXURIANT BUILD Energies élabore des solutions <br>et services multi-techniques, sur-mesure, dédiés aux infrastructures, aux bâtiments, aux usines.</div>
         </div>
 
-        <div class="noscontact" id="contact">
-            <div class="noscontacttitre">
+        <div style="height: 470px;
+	width: 100%;" id="contact">
+            <div style="color: rgb(82, 132, 15);
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    height: 40px;
+    width: 100%">
                  <ul>
                    <li class="titreNos">NOS</li>
                    <li class="tiAvantage">CONTACTS</li>
                </ul>
             </div>
-            <div class="noscontacttexte"> Une idée, une question, un besoin…? Vous souhaitez en savoir plus sur LUXURIANT BUILD ? <br>Pour nous contacter directement, veuillez utiliser le formulaire ci-dessous</div>
-            <div class="numero">
+            <div style="	font-weight: initial;
+    text-align: center;
+    height: 30px;
+    width: 100%;
+    color: #a2d84c;
+    padding-top: 10px;
+    font-size: 12px;"> Une idée, une question, un besoin…? Vous souhaitez en savoir plus sur LUXURIANT BUILD ? <br>Pour nous contacter directement, veuillez utiliser le formulaire ci-dessous</div>
+            <div style=" font-weight: initial;
+    text-align: center;
+    height: 50px;
+    width: 100%;
+    color: black;
+    display: inline-block;">
                 <ul>
-                    <li class="tcont"><img src="../../../assets/loca.png" width="20px" height="20px"> </li>
-                    <li class="tcont"> Nous sommes localises dans les villes de Monastir et Ambam</li>
+                    <li style="text-align: center;
+	display: inline-block;
+	padding-left: 20px; "><img src="../../../assets/loca.png" width="20px" height="20px"> </li>
+                    <li style="text-align: center;
+	display: inline-block;
+	padding-left: 20px; "> Nous sommes localises dans les villes de Monastir et Ambam</li>
                 </ul>
                 <ul>
-                    <li class="tcont"><img src="../../../assets/phone.png" width="20px" height="20px"> (237) 694982470 </li>
-                    <li class="tcont"><img src="../../../assets/phone.png" width="20px" height="20px"> (237) 699274182</li>
-                    <li class="tcont"><img src="../../../assets/env.png" width="20px" height="20px"> info@Luxuriant.com</li>
+                    <li style="text-align: center;
+	display: inline-block;
+	padding-left: 20px; "><img src="../../../assets/phone.png" width="20px" height="20px"> (237) 694982470 </li>
+                    <li style="text-align: center;
+	display: inline-block;
+	padding-left: 20px; "><img src="../../../assets/phone.png" width="20px" height="20px"> (237) 699274182</li>
+                    <li style="text-align: center;
+	display: inline-block;
+	padding-left: 20px; "><img src="../../../assets/env.png" width="20px" height="20px"> info@Luxuriant.com</li>
                 </ul>
                 <br>
             </div>
-            <div class="carte"></div>
+            <div style=" background-image: url(/src/assets/cart.png);
+    display: flex;
+    height: 300px;
+    width: 100%;"></div>
         </div>
-        <div class="pieds">
+        <div style="display: flex;
+	height: 300px;
+	width: 100%;
+	background-color: rgb(130, 142, 25);
+	color: white; ">
             <div class="vide"></div>
-            <div class="entre">
+            <div style="display: inline-block;
+	flex-direction: row;
+	width: 30%;
+	height: 300px;
+	padding-left: 70px;
+	padding-right: 70px;
+	padding-top: 50px; ">
                 <h2> LUXURIANT BUILD</h2> UXURIANT BUILD Energies élabore des solutions et services multi-techniques, sur-mesure, dédiés aux infrastructures, aux bâtiments, aux usines.
             </div>
-            <div class="serv">
+            <div style="display: inline-block;
+	flex-direction: row;
+	width: 20%;
+	height: 300px;
+	padding-top: 50px; ">
                 <h4 style="text-align: center;padding-right: 120px"> SERVICE</h4>
                 <ul>
                     <a href="">Infrastructure.com</a><br>
@@ -303,7 +390,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <a href="">Ict.com</a>
                 </ul>
             </div>
-            <div class="link">
+            <div style="display: inline-block;
+	flex-direction: row;
+	width: 20%;
+	height: 300px;
+	border-left: white solid 1px;
+	padding-top: 50px; ">
                     <h4 style="text-align: center; padding-right: 50px">LIEN IMPORTANT</h4>
                 <ul>
                     <a href="">Colla@Luxuriant.com</a><br>
@@ -312,7 +404,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <a href="">Servi@Luxuriant.com</a>
                 </ul>
             </div>
-            <div class="cont">
+            <div style="display: inline-block;
+	flex-direction: row;
+	width: 30%;
+	height: 300px;
+	padding-top: 50px;
+	text-align: center;
+	border-left:white solid 1px;
+	padding-left: 10px; ">
                  <h4 style="text-align:center;">CONTACT</h4>
                 <ul>
                     <!-- <img src="../../../assets/ho.png" width="20px" height="20px"> (237) 694982470<br> -->
@@ -320,10 +419,50 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <img src="../../../assets/en.png" width="20px" height="20px"> info@Luxuriant.com 
                 </ul>
                 <h4 style="color:BLACK;">SUIVEZ-NOUS</h4>
-                <div class="ali">f</div>
-                <div class="ali">tw</div>
-                <div class="ali">g+</div>
-                <div class="ali">in</div>
+                <div style=" width: 20px;
+	height: 20px;
+	background-color: black;
+	border:3px black solid;
+    border-radius: 100% ;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    display: inline-block;
+    color: rgb(130, 142, 25);
+    font-weight: bold;">f</div>
+                <div style=" width: 20px;
+	height: 20px;
+	background-color: black;
+	border:3px black solid;
+    border-radius: 100% ;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    display: inline-block;
+    color: rgb(130, 142, 25);
+    font-weight: bold;">tw</div>
+                <div style=" width: 20px;
+	height: 20px;
+	background-color: black;
+	border:3px black solid;
+    border-radius: 100% ;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    display: inline-block;
+    color: rgb(130, 142, 25);
+    font-weight: bold;">g+</div>
+                <div style=" width: 20px;
+	height: 20px;
+	background-color: black;
+	border:3px black solid;
+    border-radius: 100% ;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    display: inline-block;
+    color: rgb(130, 142, 25);
+    font-weight: bold;">in</div>
             </div>
         </div>
     </body>
