--- a/src/app/Pqges/pqge/pqge.component.html
+++ b/src/app/Pqges/pqge/pqge.component.html
@@ -150,7 +150,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 	text-align: center;
 	color: white;
 	text-decoration: none;;"><h1 style="text-align: center;margin-right: auto;
-    margin-left: auto; font-size: 35px;text-decoration: none;">LA FORCE DE L'EXPERIENCE </h1></div>
+    margin-left: auto; font-size: 35px;text-decoration: none;">MENGATA FRANCK LUTHER ING 4 ISI</h1></div>
                 <div style="display: flex;
 	flex-direction: row;
 	background-color:#a2d84c;
